Dropdown menu when page cropped fixed

--- a/aboutme.css
+++ b/aboutme.css
@@ -89,6 +89,8 @@ nav ul li a {
     .dropdown-content {
         display: none;
         position: absolute;
+        right: 0; 
+        top: 100%; 
         background-color: #333;
         z-index: 1;
     }
