--- a/books.css
+++ b/books.css
@@ -19,7 +19,7 @@ header {
     background-color: #344648;
     color: white;
     padding: 0.938rem;
-    opacity: 0.85;
+    opacity: 1;
 }
 
 .name1 {
@@ -86,6 +86,8 @@ nav ul li a {
     .dropdown-content {
         display: none;
         position: absolute;
+        right: 0; 
+        top: 100%;
         background-color: #333;
         z-index: 1;
     }
